# simple-compiler

./: .gitignore  Compiler.cabal  README.md  input
src/: Main.hs  Parser.hs
